# music01

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  design.md
native/: CMakeLists.txt
native/audio_core/include/: audio_core.hpp
native/audio_core/src/: audio_core.cpp
native/bindings/: README.md
src/music_create/: __init__.py
src/music_create/api/: schemas.py  server.py
src/music_create/audio/: __init__.py  mix_render.py  native_engine.py  repository.py  wav_loader.py
src/music_create/composition/: __init__.py  facade.py  llm.py  models.py  quantize.py  rules.py  service.py  synth.py
src/music_create/mixing/: __init__.py  analysis.py  facade.py  fx.py  mixer_graph.py  models.py  service.py  suggestion_engine.py  suggestions.py
src/music_create/project/: __init__.py  migration.py  schema.py
src/music_create/ui/: __init__.py  app.py  piano_roll.py  quick_bridge.py  timeline.py  transport_display.py  waveform.py
src/music_create/ui/qml/: ArrangerCanvas.qml  TransportStrip.qml
tests/: test_api_contract.py  test_compose_ab_compare.py  test_compose_api_contract.py  test_composition_quantize.py  test_composition_service.py  test_composition_synth.py  test_composition_ui_grid.py  test_daw_pitch_display.py  test_integrated_window_layout.py  test_migration.py  test_mix_render.py  test_mixing_service.py  test_native_engine.py  test_piano_roll_component.py  test_suggestion_engine_switch.py  test_timeline_model.py  test_transport_display.py  test_wav_loader.py  test_waveform_component.py
