[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-create"
version = "0.1.0"
description = "AI-assisted DTM architecture scaffold with future mixing automation boundaries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
music-create-ui = "music_create.ui.app:main"
music-create-build-native = "music_create.audio.native_engine:build_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]
ui = [
  "PySide6_Essentials>=6.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/music_create"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
